k8s/base/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-api-ingress
  namespace: titanic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: titanic.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: titanic-api-service
            port:
              number: 80
